logging/elasticsearch/es-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: elasticsearch
  template:
    metadata:
      labels:
        name: elasticsearch
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9108"
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch-oss:${ELASTICSEARCH_VERSION}
          ports:
            - containerPort: 9200
              name: http
            - containerPort: 9300
              name: transport
          readinessProbe:
            httpGet:
              path: /_cluster/health
              port: 9200
            initialDelaySeconds: 5
          livenessProbe:
           httpGet:
              path: /_cluster/health?local=true
              port: 9200
           initialDelaySeconds: 90
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "2Gi"
        - name: elasticsearch-exporter
          image: justwatch/elasticsearch_exporter:1.0.2
          args:
            - "-es.all"
            - "-es.indices"
            - "-es.uri=http://localhost:9200"
          resources:
            requests:
              cpu: "50m"
              memory: "250Mi"
            limits:
              cpu: "250m"
              memory: "250Mi"
        - name: elasticsearch-elastichq
          image: elastichq/elasticsearch-hq:release-v3.5.12
          ports:
            - containerPort: 5000
              name: elastichq
          resources:
            requests:
              cpu: "50m"
              memory: "250Mi"
            limits:
              cpu: "250m"
              memory: "250Mi"
