logging/elasticsearch/es-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch
spec:
  rules:
    - host: elasticsearch.local.k8s.o12stack.org
      http:
        paths:
          - path: /
            backend:
              serviceName: elasticsearch
              servicePort: http
    - host: elastichq.local.k8s.o12stack.org
      http:
        paths:
          - path: /
            backend:
              serviceName: elasticsearch
              servicePort: elastichq
